Bug 44258 - Weborder: Re-design > Delivery Info is not fully visible

--- a/skins/weborder/css/header.css
+++ b/skins/weborder/css/header.css
@@ -10,11 +10,34 @@
     letter-spacing: -5px;
 }
 
-#header .title {
-    padding: 18px 0 32px;
+
+#header .title_wrap {
+    padding: 14px 0;
     font-size: 30px;
     font-weight: 600;
     letter-spacing: 1px;
+    max-height: 70px;
+    overflow: hidden;
+    position: absolute;
+    max-width: 290px;
+    left: 229px;
+    top: 0px;
+}
+
+#header .title_wrap > div {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    min-height: 60px;
+}
+
+#header .title {
+    display: inline;
+    line-height: 36px;
+}
+
+#header .delivery_wrapper {
+    padding-top: 96px;
 }
 
 #header .row {
